kubernetes/app-html-devops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-html-devops-deployment
  namespace: test-production-deployment
  labels:
    app: html
    dep: devops
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: html
      dep: devops
      env: dev
  template:
    metadata:
      labels:
        app: html
        dep: devops
        env: dev
    spec:
      containers:
      - name: app-html-devops
        image: rcastro95/app-html-devops:83fc7738420db0511751de1daea510ff8a930978
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5

      - name: app-php-devops
        image: rcastro95/app-html-devops:83fc7738420db0511751de1daea510ff8a930978
        ports:
        - containerPort: 9000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
