kubernetes/app-project-devops-deployment-html.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-html-devops-deployment
  namespace: test-production-deployment
  labels:
    app: html
    dep: devops
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: html
      dep: devops
      env: dev
  template:
    metadata:
      labels:
        app: html
        dep: devops
        env: dev
    spec:
      containers:
      - name: app-html-devops
        image: rcastro95/app-html-devops:base2
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
