kubernetes/app-project-devops-deployment-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-php-devops-deployment
  namespace: test-production-deployment
  labels:
    app: php
    dep: devops
    env: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: php
      dep: devops
      env: dev
  template:
    metadata:
      labels:
        app: php
        dep: devops
        env: dev
    spec:
      containers:
      - name: app-php-devops
        image: rcastro95/app-php-devops:base2
        ports:
        - containerPort: 9000
        securityContext:
          runAsUser: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
