kubernetes/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-html-devops-deployment
  labels:
    app: app-html
    dep: devops
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-html
      dep: devops
      env: dev
  template:
    metadata:
      labels:
        app: app-html
        dep: devops
        env: dev
    spec:
      containers:
      - name: app-html-devops
        image: rcastro95/app-html-devops:83fc7738420db0511751de1daea510ff8a930978
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
