kubernetes/app-html-devops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-html-devops-service
  namespace: default
spec:
  selector:
    app: html
    dep: devops
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
