kubernetes/app-php-devops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-php-devops-service
  namespace: test-production-deployment
spec:
  selector:
    app: php
    dep: devops
    env: dev
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
