kubernetes/app-project-devops-service-html.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-html-devops-service
  namespace: test-production-deployment
spec:
  selector:
    app: html
    dep: devops
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
