kubernetes/app-html-devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-html-devops-ingress
  namespace: production-deployment
  labels:
    app: html
    dep: devops
    env: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: microk8s-app.betaroiup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-html-devops-service
            port:
              number: 80
